--- a/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
+++ b/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
@@ -102,82 +102,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Resultados previos\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Registren los resultados obtenidos con la mejor ejecución de Feed Forward  fully connected (MLP)"
-      ],
-      "metadata": {
-        "id": "zJgQVCa_O8iK"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9ZURt4jeIAgX"
-      },
-      "source": [
-        "Resultados obtenidos con MLP\n",
-        "\n",
-        "**Recuerden que deben completar los valores dentro de las llaves de las líneas así :**\n",
-        ">* Ejemplo: \\hline \\text{ 3 capas } & \\text { 10 epocas} & {5} & {2} & {1} & {9} & {5} & {3} \\\\\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lkDqY-ISlc_5"
-      },
-      "source": [
-        "$$\n",
-        "\\begin{aligned}\n",
-        "& \\hspace{80mm} \\text {Tabla 1.1. Mejor resultado con MLP }\\\\\n",
-        "&\\begin{array}{cccc}\n",
-        "\\hline \\text {  N° Capas  } & \\text { Neuronas } & \\text {  N° Épocas  } &\\hspace{6mm} \\text { Regularizador } & \\text { Optimizador} & \\text { Val_Acc} & \\text { Loss } \\\\\n",
-        "\\hline \\text{ __ capas } & \\text { __ neuronas por capa} & \\text{__ épocas} & \\text{} & \\text{} & \\text{} & \\text{}\\\\\n",
-        "\\hline\n",
-        "\\end{array}\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "---\n",
-        "\n",
-        "Registren la mejor configuración de la red convolucional de acuerdo a los resultados obtenidos."
-      ],
-      "metadata": {
-        "id": "CRM_jBEW0iNV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GL_XRRkX0aPf"
-      },
-      "source": [
-        "$$\n",
-        "\\begin{aligned}\n",
-        "& \\hspace{80mm} \\text {Tabla 1.2. Mejor resultado con Convolucional }\\\\\n",
-        "&\\begin{array}{cccc}\n",
-        "\\hline \\text {  N° Capas  } & \\text { Neuronas } & \\text {  N° Épocas  } &\\hspace{6mm} \\text { N° Kernel } & \\text { Tamaño Kernel } & \\text { Padding } & \\text {  Pooling  } & \\text { Stride } & \\text { Val_Acc} & \\text { Loss } \\\\\n",
-        "\\hline \\text{ __ capas } & \\text { __ neuronas por capa} & \\text{__ épocas} & \\text{} & \\text{} & \\text{} & \\text{} & \\text{} & \\text{} & \\text{}\\\\\n",
-        "\\hline\n",
-        "\\end{array}\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "###Programar red neuronal recurrente"
       ],
       "metadata": {
@@ -236,7 +160,7 @@
       "source": [
         "$$\n",
         "\\begin{aligned}\n",
-        "& \\hspace{30mm} \\text {Tabla 1.3. Primer resultado con Recurrentes }\\\\\n",
+        "& \\hspace{30mm} \\text {Tabla 1.1. Primer resultado con Recurrentes }\\\\\n",
         "&\\begin{array}{cccc}\n",
         "\\hline \\text {  N° Capas  } & \\text { N° neuronas } & \\text {  N° épocas  } & \\text { Val_Acc} & \\text { Loss } \\\\\n",
         "\\hline \\text{ __ capas } & \\text { __ neuronas por capa} & \\text{__ épocas} & \\text{} & \\text{} & \\text{} & \\text{}\\\\\n",
@@ -279,7 +203,7 @@
       "source": [
         "$$\n",
         "\\begin{aligned}\n",
-        "& \\hspace{80mm} \\text {Tabla 1.4. Mejor resultado con Recurrente }\\\\\n",
+        "& \\hspace{80mm} \\text {Tabla 1.2. Mejor resultado con Recurrente }\\\\\n",
         "&\\begin{array}{cccc}\n",
         "\\hline \\text {  N° Capas  } & \\text {  N° Épocas  } & \\text {  Batch size  }  &\\hspace{6mm} \\text { Técnica de regularización } & \\text { Optimizador}  & \\text { Función de salida} & \\text { Val_Acc} & \\text { Loss } \\\\\n",
         "\\hline \\text{ __ capas } & \\text{__ épocas} & \\text{} & \\text{} & \\text{}  & \\text{} & \\text{} & \\text{}\\\\\n",
@@ -418,7 +342,11 @@
       "cell_type": "code",
       "source": [
         "########################################################################\n",
-        "# Peguen su código acá y explíquenlo"
+        "# Peguen su código acá y explíquenlo\n",
+        "\n",
+        "\n",
+        "\n",
+        "########################################################################"
       ],
       "metadata": {
         "id": "9l4SyQFcq0EO"
