--- a/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
+++ b/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -55,7 +54,7 @@
         "*   Tendrán dos semanas para su desarrollo. \n",
         "*   Organicen la forma de trabajo durante estas dos semanas, acuerden horarios, funciones y tareas, para que tengan una buena experiencia de trabajo en equipo.\n",
         "\n",
-        "El propósito es que **logren programar una** red neuronal recurrente**, con el objetivo de solventar el **caso de EducaDL**. También, para que contrasten la arquitectura de esta red, con las ya programadas en actividades anteriores.\n",
+        "El propósito es que **logren programar una RNN**, con el objetivo de solventar el **caso de EducaDL**. También, para que contrasten la arquitectura de esta red, con las ya programadas en actividades anteriores.\n",
         "\n",
         "La actividad está estructurada en dos partes, parte 1 (entrega semana 11), y parte 2 (entrega semana 12). En donde deberán **consolidar respuestas anteriores**, corregidas por la retroalimentación docente, más lo nuevo solicitado para la entrega final.\n",
         "\n",
@@ -63,11 +62,12 @@
         "\n",
         "Recurrir como base a los siguientes recursos de aprendizaje :\n",
         " \n",
-        "* Guía de Aprendizaje. Redes convolucionales - Modelos íconos\n",
-        "* Convolución.\n",
-        "* Capa Convolucional.\n",
-        "* Pooling y Parámetros.\n",
-        "* Goodfellow, I., Bengio, Y., & Courville, (2017) Pooling. En Deep Learning. The MIT PressCambridge, Massachusetts London, England. (pp. 330 -336). (E-libro)\n",
+        "* Redes Recurrentes Parte 1.\n",
+        "* Redes Recurrentes Parte 2.\n",
+        "* Goodfellow, I., Bengio, Y., & Courville, (2017) Recurrent Neural Networks. En  Deep Learning. The MIT PressCambridge. (pp.368 - 382).\n",
+        "* Goodfellow, I., Bengio, Y., & Courville, (2017) Bidirectional RNNs. En  Deep Learning. The MIT PressCambridge. (pp.383 - 384).\n",
+        "* Goodfellow, et al. (2017) The Long Short-Term Memory and Other Gated RNNsT. En Deep Learning. The MIT PressCambridge.(pp. 397 - 400).\n",
+        "* Videos de apoyo actividad.\n",
         "\n",
         "\n",
         "**Recuerden, generar una copia en su DRIVE de este archivo, antes de editarlo. Si presentan dudas o consultas en relación con la evaluación, pueden comunicarse con su docente FOL, a través de los medios de comunicación disponibles en el ambiente virtual de aprendizaje (AVA).** \n",
@@ -92,11 +92,11 @@
       "source": [
         "## Parte 1. Semana 11: Redes Recurrentes\n",
         "\n",
-        "Programar una **Red Neuronal Recurrente de tipo LSTM** basada en el caso de EducaDL, comparando el rendimiento del modelo, a través del uso de las diferentes herramientas y arquitecturas revisadas en el material.\n",
+        "Programar una **RNN-LSTM** basada en el caso de EducaDL, utilizando como guía el video de apoyo a la actividad disponible en el ambiente virtual de aprendizaje, comparando el rendimiento del modelo a través del uso de las diferentes herramientas y arquitecturas revisadas en el material.\n",
         "\n",
-        "**Registren el resultado obtenido**, e intenten **mejorar el accuracy y disminuir el Loss** de modo que puedan contrastar las primeras ejecuciones utilizando la red convolucional, con las arquitecturas antes efectuadas, métodos y ajustes.\n",
+        "**Registren los resultados obtenidos**, e intenten **garantizar la generalización del modelo** a través del aumento de accuracy y disminución de loss, de modo que puedan contrastar las primeras ejecuciones utilizando la red recurrente, con las arquitecturas antes efectuadas, métodos y ajustes.\n",
         "\n",
-        "**Recuerden evidenciar los resultados de la primera y la última ejecución**\n"
+        "**Recuerden evidenciar los resultados de la primera y la mejor ejecución**\n"
       ]
     },
     {
@@ -231,7 +231,7 @@
       "source": [
         "## Parte 2. Semana 12: Redes Recurrente con LSTM Bidireccional\n",
         "\n",
-        "Programen una **Red Neuronal Recurrente de tipo LSTM Bidireccional** basada en el caso de EducaDL, comparando el rendimiento del modelo, a través del uso de las diferentes herramientas y arquitecturas revisadas en el material. \n",
+        "Programen una **Red Neuronal Recurrente de tipo LSTM Bidireccional** basada en el caso de EducaDL, comparando el desempeño del modelo, a través del uso de las diferentes herramientas y arquitecturas revisadas en el material del curso. \n",
         "\n"
       ],
       "metadata": {
