--- a/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
+++ b/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -49,12 +50,12 @@
       "source": [
         "**Descripción de la actividad**\n",
         "\n",
-        "A continuación, te invitamos a desarrollar la siguiente **actividad sumativa, de carácter grupal con el mismo equipo que han venido trabajando.** Esta actividad es de caracter obligatorio para el desarrollo del caso semestral y ET. \n",
+        "A continuación, te invitamos a desarrollar la siguiente **actividad sumativa, de carácter grupal con el mismo equipo que han venido trabajando.** Esta actividad es de caracter obligatorio.\n",
         "\n",
         "*   Tendrán dos semanas para su desarrollo. \n",
         "*   Organicen la forma de trabajo durante estas dos semanas, acuerden horarios, funciones y tareas, para que tengan una buena experiencia de trabajo en equipo.\n",
         "\n",
-        "El propósito es que **logren programar una RNN**, con el objetivo de solventar el **caso de EducaDL**. También, para que contrasten la arquitectura de esta red, con las ya programadas en actividades anteriores.\n",
+        "El propósito es que **logren programar una RNN**, con el objetivo de programar una red que haga **análisis de texto**. También, para que contrasten la arquitectura de esta red, con las ya programadas en actividades anteriores.\n",
         "\n",
         "La actividad está estructurada en dos partes, parte 1 (entrega semana 11), y parte 2 (entrega semana 12). En donde deberán **consolidar respuestas anteriores**, corregidas por la retroalimentación docente, más lo nuevo solicitado para la entrega final.\n",
         "\n",
@@ -92,12 +93,37 @@
       "source": [
         "## Parte 1. Semana 11: Redes Recurrentes\n",
         "\n",
-        "Programar una **RNN-LSTM** basada en el caso de EducaDL, utilizando como guía el video de apoyo a la actividad disponible en el ambiente virtual de aprendizaje, comparando el rendimiento del modelo a través del uso de las diferentes herramientas y arquitecturas revisadas en el material.\n",
+        "**EducaDL** se ha planteado como un nuevo proyecto, **implementar redes neuronales para poder analizar las evaluaciones de sus docentes**, basándose en los **comentarios que realizan los apoderados** de la institución. Para ello, y como aún no se tiene implementado este nuevo sistema de evaluación, la institución sugiere **generar el entrenamiento de una red neuronal basado en un dataset de comentarios de clientes de Amazon**, y luego cuando esté entrenado el modelo, implementarlo en el contexto del problema. \n",
+        "\n",
+        "El dataset lo puedes encontrar en el ambiente de aprendizaje virtual como **5_AmazonComentarios.txt**\n",
+        "\n",
+        "Deberán programar una **RNN simple** en función del caso planteado para esta actividad, utilizando como guía el material disponible en las experiencias de aprendizaje, además del video de apoyo que se encuentra en el ambiente virtual de aprendizaje, comparando el rendimiento del modelo a través del uso de las diferentes herramientas y arquitecturas revisadas en los recursos de aprendizaje.\n",
         "\n",
         "**Registren los resultados obtenidos**, e intenten **garantizar la generalización del modelo** a través del aumento de accuracy y disminución de loss, de modo que puedan contrastar las primeras ejecuciones utilizando la red recurrente, con las arquitecturas antes efectuadas, métodos y ajustes.\n",
         "\n",
-        "**Recuerden evidenciar los resultados de la primera y la mejor ejecución**\n"
+        "**Recuerden evidenciar los resultados de la primera y la mejor ejecución**.\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#########################################################\n",
+        "# Acá importen las librerías necesarias \n",
+        "\n",
+        "\n",
+        "#########################################################\n",
+        "# Acá realicen la lectura del dataset 5_AmazonComentarios.txt\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#########################################################"
+      ],
+      "metadata": {
+        "id": "sLWUFW7myZ5w"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -112,7 +138,7 @@
       "cell_type": "code",
       "source": [
         "#########################################################\n",
-        "# Acá creen su primera red Recurrente de tipo LSTM\n",
+        "# Acá creen su primera simple RNN\n",
         "\n",
         "\n",
         "#########################################################"
@@ -126,31 +152,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ahora, deben experimentar modificando los diferentes hiperparámetros\n",
-        "\n",
-        "* N° de capas:\n",
-        "* N° de neuronas por capa:\n",
-        "* N° de épocas:\n",
-        "\n"
+        "Registren el primer resultado de la ejecución"
       ],
       "metadata": {
-        "id": "8DzRsdgNSF_J"
+        "id": "Q36D-XqpbrBz"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#########################################################\n",
-        "#Experimenten aquí una vez, y registren el primer resultado obtenido\n",
-        "\n",
-        "\n",
-        "#########################################################\n"
-      ],
-      "metadata": {
-        "id": "9GmtF-qDHlap"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -162,8 +168,8 @@
         "\\begin{aligned}\n",
         "& \\hspace{30mm} \\text {Tabla 1.1. Primer resultado con Recurrentes }\\\\\n",
         "&\\begin{array}{cccc}\n",
-        "\\hline \\text {  N° Capas  } & \\text { N° neuronas } & \\text {  N° épocas  } & \\text { Val_Acc} & \\text { Loss } \\\\\n",
-        "\\hline \\text{ __ capas } & \\text { __ neuronas por capa} & \\text{__ épocas} & \\text{} & \\text{} & \\text{} & \\text{}\\\\\n",
+        "\\hline \\text {  N° Capas  } & \\text { Batch size } & \\text {  N° épocas  } & \\text { Val_Acc} & \\text { Loss } \\\\\n",
+        "\\hline \\text{ __ capas } & \\text { } & \\text{__ épocas} & \\text{} & \\text{} & \\text{} & \\text{}\\\\\n",
         "\\hline\n",
         "\\end{array}\n",
         "\\end{aligned}\n",
@@ -175,7 +181,7 @@
       "cell_type": "code",
       "source": [
         "#########################################################\n",
-        "#Realicen los ajustes de hiperparámetros que estime necesario y registren el mejor resultado obtenido\n",
+        "#Realicen los ajustes de hiperparámetros que estimen necesarios y registren el mejor resultado obtenido\n",
         "\n",
         "\n",
         "#########################################################"
@@ -189,7 +195,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Registren a continuación, la mejor ejecución que hayan tenido con recurrente en la siguiente tabla:"
+        "Registren a continuación, la mejor ejecución que hayan tenido con simple RNN en la siguiente tabla:"
       ],
       "metadata": {
         "id": "1SMpIlXoHqYI"
@@ -217,13 +223,37 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Responde las siguientes preguntas \n",
+        "Respondan las siguientes preguntas:\n",
         "\n",
         "1. Expliquen la estrategia que se utilizó para **lograr una mejor generalización de la red**. Expecifiquen si la estrategia fue o no **cambiando la capacidad de la red**. Fundamenten cómo lo hicieron.\n",
-        "2. Generar en paint un número a mano alzada, y realicen una **predicción de la imagen** en el modelo implementado. Comenten el resultado de la prueba.\n"
+        "2. Generar una **predicción de tipo de comentario** en el modelo implementado utilizando un input por consola, la red debe responder si su comentario es positivo o negativo. Comenten el resultado obtenido de la prueba.\n"
       ],
       "metadata": {
         "id": "qS4_CDr1K6hH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#########################################################\n",
+        "# Implementen acá la el método predict para una frase ingresada por input\n",
+        "\n",
+        "\n",
+        "#########################################################"
+      ],
+      "metadata": {
+        "id": "rhpy4N123-So"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Comenten aquí qué ocurrió con la predicción."
+      ],
+      "metadata": {
+        "id": "wCuMzy7F4N9U"
       }
     },
     {
@@ -231,7 +261,7 @@
       "source": [
         "## Parte 2. Semana 12: Redes Recurrente con LSTM Bidireccional\n",
         "\n",
-        "Programen una **Red Neuronal Recurrente de tipo LSTM Bidireccional** basada en el caso de EducaDL, comparando el desempeño del modelo, a través del uso de las diferentes herramientas y arquitecturas revisadas en el material del curso. \n",
+        "Basado en la arquitectura que construyeron en la actividad parte 1, implemente una **Red Neuronal Recurrente de tipo LSTM Bidireccional** basada en el caso planteado, comparando el desempeño del modelo, a través del uso de las diferentes herramientas y arquitecturas revisadas en los recursos de aprendizaje.\n",
         "\n"
       ],
       "metadata": {
@@ -242,8 +272,8 @@
       "cell_type": "code",
       "source": [
         "#########################################################\n",
-        "#Experimenten aquí una vez, y registren el primer resultado obtenido\n",
-        "#Recuerden incorporar todos los hiperparámetros y técnicas que consideren necesarias para mejorar el desempeño de la red\n",
+        "#Experimenten aquí una vez, y registren el primer resultado obtenido.\n",
+        "#Recuerden incorporar todos los hiperparámetros y técnicas que consideren necesarias para mejorar el desempeño de la red.\n",
         "\n",
         "\n",
         "#########################################################\n"
@@ -330,9 +360,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Fundamenten en máximo 5 líneas, **la arquitectura RNN-LSTM**, esto es número de capas, al número de neuronas por capa y las diferentes técnicas aprendidas hasta ahora. ¿Por qué escogieron esos hiperparámetros y esas técnicas?\n",
+        "1. Fundamenten en máximo 5 líneas **la arquitectura RNN-LSTM Bidireccional utilizada**\n",
         "\n",
-        "2. Peguen a continuación el código donde definen las capas de la **RNN-LSTM**, y expliquen línea por línea, la técnica de regularización utilizada, la función de salida, las funciones de activación, y el número de neuronas por capa. Justifiquen su elección en la configuración.\n"
+        "2. Inserten a continuación el código donde definen las capas de la **RNN-LSTM**, y expliquen línea por línea, la técnica de regularización utilizada, la función de salida, las funciones de activación, y el número de neuronas por capa. Justifiquen su elección en la configuración.\n"
       ],
       "metadata": {
         "id": "Siy_AweoXCM7"
@@ -342,7 +372,7 @@
       "cell_type": "code",
       "source": [
         "########################################################################\n",
-        "# Peguen su código acá y explíquenlo\n",
+        "# Inserten su código acá y explíquenlo\n",
         "\n",
         "\n",
         "\n",
@@ -353,6 +383,40 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Generar una nueva predicción de tipo de comentario en el modelo implementado utilizando un input por consola, la red debe responder si su comentario es positivo o negativo. Comenten el resultado obtenido de la prueba y contrástenlo con la arquitectura de RNN simple."
+      ],
+      "metadata": {
+        "id": "_N9vjvbc4X5Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "########################################################################\n",
+        "# Implementen acá la predicción con RNN-LSTM Bidireccional\n",
+        "\n",
+        "\n",
+        "\n",
+        "########################################################################"
+      ],
+      "metadata": {
+        "id": "HTBSeV-m4nG6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Comenten aquí qué ocurrió con la predicción en una RNN-LSTM Bidireccional y las diferencias con una RNN no bidirecional."
+      ],
+      "metadata": {
+        "id": "JiKdOCZ44zid"
+      }
     },
     {
       "cell_type": "markdown",
