--- a/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
+++ b/5_Actividad_Programando_Redes_Recurrentes_EX2.ipynb
@@ -55,7 +55,7 @@
         "*   Tendrán dos semanas para su desarrollo. \n",
         "*   Organicen la forma de trabajo durante estas dos semanas, acuerden horarios, funciones y tareas, para que tengan una buena experiencia de trabajo en equipo.\n",
         "\n",
-        "El propósito es que **logren programar una RNN**, con el objetivo de programar una red que haga **análisis de texto**. También, para que contrasten la arquitectura de esta red, con las ya programadas en actividades anteriores.\n",
+        "El propósito es que **logren programar una RNN**, que realice **análisis de texto**. También, para que contrasten la arquitectura de esta red, con las ya programadas en actividades anteriores.\n",
         "\n",
         "La actividad está estructurada en dos partes, parte 1 (entrega semana 11), y parte 2 (entrega semana 12). En donde deberán **consolidar respuestas anteriores**, corregidas por la retroalimentación docente, más lo nuevo solicitado para la entrega final.\n",
         "\n",
